--- a/TrinityEd_project/templates/learner_detail.html
+++ b/TrinityEd_project/templates/learner_detail.html
@@ -10,7 +10,7 @@
     <p><strong>Attendance:</strong> {{ learner.attendance_percentage }}%</p>
     <p><strong>Performance:</strong> {{ learner.performance_score }}</p>
   </div>
-  <a href="{% url 'learner_list' %}" 
+  <a href="{% url 'student_list' %}" 
      class="mt-4 inline-block px-4 py-2 bg-gray-600 text-white rounded-lg hover:bg-gray-700">Back</a>
 </div>
 {% endblock %}
