--- a/TrinityEd_project/templates/performance.html
+++ b/TrinityEd_project/templates/performance.html
@@ -119,7 +119,7 @@
   </style>
 </head>
 <body class="flex flex-col min-h-screen bg-cover bg-center bg-fixed relative" 
-      style="background-image: url('{% static "img\mentor_wallpaper.webp" %}')">
+      style="background-image: url('{% static "img\mentor_wallpaper.webp" %}');">
   
   <!-- optional overlay for contrast -->
   <div id="macWindow" class="mac-window flex flex-col h-[90vh] relative z-10">
